Fix word-wrap issue in report (#78)

--- a/assets/styles.less
+++ b/assets/styles.less
@@ -132,6 +132,12 @@ h2[data-toggle] {
     }
 }
 
+#report {
+    #coding-systems td {
+        word-break: break-all;
+    }
+}
+
 div.results {
     padding-bottom: 100px;
     min-height: 100%;
